Part1/getting-started/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timestamp-string
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timestamp-string
  template:
    metadata:
      labels:
        app: timestamp-string
    spec:
      containers:
        - name: timestamp-string
          image: aventusm/timestamp
