Part1/getting-started/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timestamp-string-service
spec:
  type: ClusterIP
  selector:
    app: timestamp-string
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
