Part1/getting-started/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: timestamp-string-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: timestamp-string-service
          servicePort: 2345
